CHANGES:

0.7.x -> 0.8.0
- Initial WordPerfect 3.0-3.5 for Mac support (Marc Maurer)
- WP3 and WP5: Conversion of the extended character set, of page 
  margins, page form and orientation, line spacing, paragraph
  justification (Fridrich Strba, Smokey Ardisson)
- WP3: Conversion of text attributes (Fridrich Strba)
- WP6: Respect paragraph and span properties defined in a Table Cell;
  conversion of header row; conversion of table-related single-byte
  functions (Fridrich Strba)
- WP6: Conversion of Tab Set function and of table row height, as well
  as conversion of "font size change" text attributes (bits 0-4)
  (Fridrich Strba)
- WP6: Added conversion of spacing after paragraph and of first
  line indentation done by functions of the paragraph Group
  (Fridrich Strba)
- WP6: Table cell vertical alignment conversion and colour of the
  cell border (Fridrich Strba)
- WP6: Conversion of text columns size (width and gutters) (Fridrich Strba)
- WP6: Improvements in conversion of tabulators (Fridrich Strba)
- WP6: Text highlight conversion (Fridrich Strba)
- WP6: Page form and orientation conversion (Fridrich Strba)
- WP6: Font colour conversion (Fridrich Strba)
- Remove span parameters from calls to openParagraph and openListElement
  (William Lachance)
- Additional doxygen comments (William Lachance, Fridrich Strba)
- Remove mandatory dependancy on glib/libgsf for external applications
  (William Lachance, Michael Meeks)

0.7.1 -> 0.7.2
- Added conversion of paragraph margins done by functions of the
  paragraph group
- Conversion of Hard-Line-Breaks (Fridrich Strba)
- Fixed bug in WP6FixedLengthGroup handling (Fridrich Strba)
- Added --callgraph to wpd2raw, and added all parameters to the 
  output (Marc Maurer)
- Fixed a bug that prevented the conversion of full justification
  (Fridrich Strba)
- wpd2foo tools properly detect if a file format is suported
  or not (Marc Maurer)
- Handle unsupported file types other than WordPerfect documents